# gst-airplay

./: configure.ac  groups  project.config
src/: Makefile.am  gstairplaysrc.c  gstairplaysrc.h
